Fixed textarea of forms overflow

--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -105,6 +105,7 @@ input, textarea {
 
 .input-main {
   width: 100%;
+  max-width: 100%;
   padding: 0.5rem;
   border: 2px solid #bdbdbd;
   border-radius: 5px;
